--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,15 +1,4 @@
-<!doctype html>
-<html lang="en">  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sleep Outside | Home</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="/js/main.js" type="module"></script>
-    
-  </head>
-
-  <body>
-    <header class="divider" id="header">
+ <header class="divider">
       <div class="logo">
         <img src="/images/noun_Tent_2517.svg" alt="tent image for logo" />
         <a href="index.html"> Sleep<span class="highlight">Outside</span></a>
@@ -42,49 +31,4 @@
         </a>
       </div>
     </header>
-    <main class="divider">
-      <div class="hero">
-        <img
-          src="/images/banner-sm.jpg"
-          srcset="images/banner-sm.jpg 500w, images/banner.jpg"
-          alt="image of a high mountain lake"
-        />
-        <div class="logo logo--square">
-          <img src="/images/noun_Tent_2517.svg" alt="tent image for logo" />
-          <div>Sleep<span class="highlight">Outside</span></div>
-        </div>
-        <div class="mission">
-          <p>
-            Our mission is to provide you with everything you need to sleep
-            outside comfortably at an affordable price.
-          </p>
-        </div>
-      </div>      <section class="products">
-        <h2>Top Products</h2>
-        <ul class="product-list">
-          <!-- Product list will be built dynamically by JavaScript -->
-        </ul>
-      </section>
-    </main>
-    <footer id="footer">
-      &copy;2025 ⛺ SleepOutside ⛺ WDD 330 ⛺ BYU-Idaho for BYU-Pathway
-      Worldwide Online
-    </footer>
-<!-- Cart Item Template -->
-    <template id="cart-item-template">
-      <li class="cart-card divider">
-        <a href="#" class="cart-card__image">
-          <img src="" alt="" />
-        </a>
-        <a href="#">
-          <h2 class="card__name"></h2>
-        </a>
-        <p class="cart-card__color"></p>
-        <p class="cart-card__quantity"></p>
-        <p class="cart-card__price"></p>
-      </li>
-    </template>
-
-
-  </body>
-</html>
+   
