--- a/src/css/style.css
+++ b/src/css/style.css
@@ -254,6 +254,7 @@ button {
   font-size: var(--small-font);
   /* max-height: 120px; */
   align-items: center;
+  position: relative;
 }
 
 .cart-card__image {
@@ -283,6 +284,47 @@ button {
 .cart-card__price {
   grid-row: 2;
   grid-column: 3;
+}
+
+/* Remove button styles for cart items */
+.cart-card__remove {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: var(--tertiary-color);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  transition: background-color 0.2s ease;
+  z-index: 1;
+}
+
+.cart-card__remove:hover {
+  background-color: #a63a08;
+}
+
+.cart-card__remove span {
+  line-height: 1;
+  padding: 0;
+  margin: 0;
+}
+
+/* Update cart-card to support absolute positioning for remove button */
+.cart-card {
+  display: grid;
+  grid-template-columns: 25% auto 15%;
+  font-size: var(--small-font);
+  /* max-height: 120px; */
+  align-items: center;
+  position: relative;
 }
 
 @media screen and (min-width: 500px) {
