--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,7 +77,6 @@ p {
   font-size: var(--small-font);
   width: 110px;
   height: 80px;
-
   flex-direction: column;
   align-items: flex-end;
   box-shadow: 1px 1px 4px var(--light-grey);
@@ -223,6 +222,34 @@ button {
   max-width: 250px;
 }
 
+.product-card img {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  margin: 0 auto;
+  display: block;
+}
+
+@media screen and (max-width: 500px) {
+  .product-card img {
+    max-width: 120px;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 768px) {
+  .product-card img {
+    max-width: 150px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .product-card img {
+    max-width: 200px;
+  }
+}
+
 .product-card h2,
 .product-card h3,
 .product-card p {
@@ -247,6 +274,30 @@ button {
 
 .product-detail img {
   width: 100%;
+  max-width: 400px;
+  height: auto;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  margin: 0 auto;
+  display: block;
+}
+
+@media screen and (max-width: 500px) {
+  .product-detail img {
+    max-width: 250px;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 768px) {
+  .product-detail img {
+    max-width: 300px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .product-detail img {
+    max-width: 400px;
+  }
 }
 
 /* Start cart list card styles */
@@ -254,7 +305,6 @@ button {
   display: grid;
   grid-template-columns: 25% auto 15%;
   font-size: var(--small-font);
-  /* max-height: 120px; */
   align-items: center;
   position: relative;
 }
@@ -262,6 +312,32 @@ button {
 .cart-card__image {
   grid-row: 1/3;
   grid-column: 1;
+}
+
+.cart-card__image img {
+  width: 100%;
+  max-width: 80px;
+  height: auto;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 500px) {
+  .cart-card__image img {
+    max-width: 50px;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 768px) {
+  .cart-card__image img {
+    max-width: 60px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .cart-card__image img {
+    max-width: 80px;
+  }
 }
 
 .cart-card p {
@@ -295,6 +371,7 @@ button {
   right: 5px;
   background-color: var(--tertiary-color);
   color: white;
+'Arial Black', 'Helvetica Bold', Arial, sans-serif;
   border: none;
   border-radius: 50%;
   width: 24px;
@@ -317,16 +394,6 @@ button {
   line-height: 1;
   padding: 0;
   margin: 0;
-}
-
-/* Update cart-card to support absolute positioning for remove button */
-.cart-card {
-  display: grid;
-  grid-template-columns: 25% auto 15%;
-  font-size: var(--small-font);
-  /* max-height: 120px; */
-  align-items: center;
-  position: relative;
 }
 
 @media screen and (min-width: 500px) {
